feat(backend): upgrade ci and backend to java 17
Closes #137